--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,3 +16,18 @@ body {
   color: var(--text-default);
   display: block;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.4rem;
+}
+.formRow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.4rem;
+}
